samples/_failures_safe/1761416059_3223c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_181db6f4.c: In function ‘main’:
./samples/SAFE/__tmp_181db6f4.c:174:5: error: expected declaration or statement at end of input
  174 |     }
      |     ^
